criacao do links para navegacao dentro da mesma pagina

--- a/home.html
+++ b/home.html
@@ -19,13 +19,13 @@
                             <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#">Serviços</a>
+                            <a href="#services">Serviços</a>
                         </li>
                         <li>
-                            <a href="#">Contatos</a>
+                            <a href="#contactus">Contatos</a>
                         </li>
                         <li>
-                            <a href="#">Sobre</a>
+                            <a href="#about">Sobre</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,15 +41,14 @@
                 <a href="">Fale conosco</a>
             </div>
         </section>
-        <section class="default light">
+        <section class="default light" id="about">
             <div class="section-title">Quem eu sou</div>
             <div class="section-img">
                 <img src="assets/img/perfil6.jpeg" alt="" width="200px" height="200px">
             </div>
             <div class="section-body">
                 <div class="section-aboutus">
-                    
-                    <div class="section-aboutus--center">
+                    <div class="section-aboutus--center" >
                         <p>
                             Sou uma pessoa que diariamente busco por me tornar sempre um ser humano melhor, seja através das minhas atitudes, ou através das minhas buscas por conteúdos que me façam um profissional capacitado e que está sempre disposto a lutar por novas conquistas e novos aprendizados. 
                             Atualmente trabalho como desenvolvedor web backend e sou graduando do curso de sistema de informção no instituto federeal do maranhão.
@@ -64,8 +63,8 @@
                 </div>
             </div>
         </section>
-        <section class="default dark">
-            <div class="section-title">Serviços</div>
+        <section class="default dark" id="services">
+            <div class="section-title" >Serviços</div>
             <div class="section-body">
                 <div class="section-services">
                     <div class="section-service">
@@ -92,7 +91,7 @@
             </div>
         </section>
         <section class="default light">
-            <div class="section-title">Contatos</div>
+            <div class="section-title" id="contactus">Contatos</div>
             <div class="section-body">
                 <div class="section-contact">
                     <form method="POST">
